# agentic-tester

./: .gitignore  Dockerfile  main.py  pyproject.toml  test.sql
.github/workflows/: docker-image.yml
app/: agent.py  api.py  prompts.py  results_writer.py  settings.py
app/blob_storage/: base.py  local.py  supabase.py
k8s/: agentic-tester.yaml
testvista-v2/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
testvista-v2/src/: App.tsx  index.css
testvista-v2/src/components/auth/: ProtectedRoute.tsx
testvista-v2/src/components/dashboard/: dashboard-header.tsx  folder-card.tsx  stats-card.tsx
testvista-v2/src/components/layout/: sidebar.tsx
testvista-v2/src/components/project/: folder-preview-item.tsx  my-space-content.tsx  project-filters.tsx  shared-projects-content.tsx  unified-project-card.tsx
testvista-v2/src/components/suite/: artifact-selection-chips.tsx  artifact-selection-modal.tsx  artifacts-panel.tsx  chat-panel.tsx  next-step-chips.tsx  save-version-dialog.tsx  version-action-chips.tsx  version-history-modal.tsx
testvista-v2/src/components/ui/: create-suite-modal.tsx  dialog.tsx  full-screen-modal.tsx  logo.tsx  relationship-indicator.tsx  tooltip.tsx  traceability-matrix.tsx
testvista-v2/src/data/: mockProjects.ts
testvista-v2/src/hooks/: use-version-manager.ts
testvista-v2/src/pages/: CreateSuite.tsx  Dashboard.tsx  Index.tsx  Login.tsx  MySpace.tsx  ProjectFolders.tsx  ProjectManagement.tsx  ReferenceFiles.tsx  Standards.tsx  SuiteWorkspace.tsx  TestSuites.tsx
testvista-v2/src/types/: project.ts  version.ts
