[project]
name = "agentic-tester"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.7.4",
    "autogen-ext[openai]>=0.7.4",
    "fastapi>=0.116.1",
    "pydantic-settings>=2.10.1",
    "supabase>=2.18.1",
    "uvicorn>=0.35.0",
]
